--- a/package.json
+++ b/package.json
@@ -9,22 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^3.1.14",
-    "@types/file-saver": "^2.0.6",
-    "@types/html-docx-js": "^0.3.3",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@types/node": "20.8.10",
     "@types/react": "18.2.36",
     "@types/react-dom": "18.2.14",
-    "convert-html-to-pdf": "^1.0.1",
-    "file-saver": "^2.0.5",
-    "html-docx-js": "^0.3.1",
-    "html-docx-js-typescript": "^0.1.5",
-    "html-to-pdf": "^0.1.11",
-    "jspdf": "^2.5.1",
-    "mammoth": "^1.6.0",
     "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
